Fixed layout issue w/ lov icons in List view.

--- a/src/components/views/many/List.scss
+++ b/src/components/views/many/List.scss
@@ -43,7 +43,12 @@
       }
     }
   }
-
+  .nobr{
+    white-space: nowrap;
+    max-width: 500px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 .list-new{
   border-top: 1px solid #ddd;
